solve the z-index in create room

--- a/src/components/CreateRoom/CreateRoom.css
+++ b/src/components/CreateRoom/CreateRoom.css
@@ -12,6 +12,8 @@
     left: 0;
     top: 0;
     bottom: 0;
+
+    z-index: 5;
     
     flex-direction: column;
     align-items: center;
